k8s/applications/router/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: router
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - name: http
        port: 80
