k8s/applications/router/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: access-point
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
